MDEV-7970: EXPLAIN FORMAT=JSON does not print HAVING

Printing non-trivial HAVING added.